# oneclaw

./: .gitignore  Cargo.toml  README.md  install.sh
src/: config.rs  coordination.rs  cron.rs  daemon.rs  doctor.rs  goals.rs  health.rs  heartbeat.rs  hooks.rs  identity.rs  lib.rs  main.rs  service.rs  update.rs
src/agent/: dispatcher.rs  mod.rs  prompt.rs  task_manager.rs
src/channels/: mod.rs  telegram.rs  traits.rs  transcription.rs  whatsapp.rs  whatsapp_storage.rs  whatsapp_web.rs
src/memory/: markdown.rs  mod.rs  none.rs  sqlite.rs  vector.rs
src/providers/: anthropic.rs  compatible.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
src/router/: mod.rs  orchestrator.rs
src/tools/: file_read.rs  file_write.rs  mod.rs  shell.rs  web_fetch.rs  web_search.rs
