[package]
name = "oneclaw"
version = "0.1.0"
edition = "2021"
authors = ["OneClaw Contributors"]
license = "MIT OR Apache-2.0"
description = "Multi-agent AI assistant — local-first, multi-provider, fully autonomous."
readme = "README.md"
keywords = ["ai", "agent", "cli", "multi-agent", "ollama"]
categories = ["command-line-utilities", "api-bindings"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.42", default-features = false, features = [
    "rt-multi-thread", "macros", "time", "net", "io-util",
    "sync", "process", "io-std", "fs", "signal",
] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config
directories = "6.0"
toml = "1.0"
shellexpand = "3.1"

# Logging
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# UUID
uuid = { version = "1.11", features = ["v4"] }

# Time
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }

# Memory / persistence
rusqlite = { version = "0.37", features = ["bundled"] }

# Interactive CLI
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
rustyline = "17.0"
console = "0.16"

# Async traits
async-trait = "0.1"

# Regex for classifier
regex = "1.10"

# Hostname
hostname = "0.4.2"

# URL encoding
urlencoding = "2.1"

# HTML to plain text
nanohtml2text = "0.2"

# Streaming
tokio-stream = { version = "0.1.18", default-features = false, features = ["sync"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

# Base64
base64 = "0.22"

# Cron expression parsing
cron = "0.12"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
